--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
+    compile 'com.github.yjfnypeu.Router-RePlugin:plugin:c2522e4ded'
 }
