--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
-    package="com.lzh.router.replugin.plugin">
+    package="com.lzh.router.replugin.core">
 
     <application android:allowBackup="true"
         android:supportsRtl="true">
 
-
+        <activity
+            android:theme="@android:style/Theme.Translucent"
+            android:name=".RouterBridgeActivity"/>
     </application>
 
 </manifest>
