--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -23,12 +23,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile project(':core')
+
     provided 'com.qihoo360.replugin:replugin-plugin-lib:2.1.7'
-
-    compile "org.lzh.compiler.parceler:parceler-api:${PARCELER_VERSION}"
-    compile "com.github.yjfnypeu.Router:router-api:${ROUTER_VERSION}"
-
-
+    provided "org.lzh.compiler.parceler:parceler-api:${PARCELER_VERSION}"
     provided 'com.android.support:support-v4:25.3.1'
 }
 
