--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
-    compile 'com.github.yjfnypeu.Router-RePlugin:plugin:c2522e4ded'
+//    compile 'com.github.yjfnypeu.Router-RePlugin:plugin:c2522e4ded'
+    compile project(':plugin')
 }
