--- a/host/build.gradle
+++ b/host/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-
+apply plugin: 'maven'
 android {
     compileSdkVersion 25
     buildToolsVersion "26.0.1"
@@ -24,9 +24,13 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile project(':core')
 
     provided 'com.qihoo360.replugin:replugin-host-lib:2.1.7'
     provided "org.lzh.compiler.parceler:parceler-api:${PARCELER_VERSION}"
     provided 'com.android.support:support-v4:25.3.1'
-    compile "com.github.yjfnypeu.Router:router-host:${ROUTER_VERSION}"
+
+    compile "org.lzh.nonview.updateplugin:UpdatePlugin:${UpdatePlugin_version}"
 }
+
+apply from: '../javadoc.gradle'
