removing unnecessary manifest

--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 
     package="com.lzh.router.replugin.core">
 
-    <application android:allowBackup="true"
-        android:supportsRtl="true">
+    <application>
 
         <activity
             android:theme="@android:style/Theme.Translucent"
