--- a/plugin/src/main/AndroidManifest.xml
+++ b/plugin/src/main/AndroidManifest.xml
@@ -1,10 +1,8 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
 
     package="com.lzh.router.replugin.plugin">
 
-    <application android:allowBackup="true"
-        android:supportsRtl="true">
-
+    <application>
 
     </application>
 
