--- a/core/build.gradle
+++ b/core/build.gradle
@@ -22,13 +22,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-
-    provided 'com.qihoo360.replugin:replugin-plugin-lib:2.1.7'
+    provided "com.qihoo360.replugin:replugin-plugin-lib:${RePlugin_version}"
     provided "org.lzh.compiler.parceler:parceler-api:${PARCELER_VERSION}"
-    provided 'com.android.support:support-v4:25.3.1'
-    compile "com.github.yjfnypeu.Router:router-api:${ROUTER_VERSION}"
+    provided "com.github.yjfnypeu.Router:router-api:${ROUTER_VERSION}"
 }
 
 apply from: '../javadoc.gradle'
