--- a/host/build.gradle
+++ b/host/build.gradle
@@ -22,15 +22,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile project(':core')
 
-    provided 'com.qihoo360.replugin:replugin-host-lib:2.1.7'
     provided "org.lzh.compiler.parceler:parceler-api:${PARCELER_VERSION}"
-    provided 'com.android.support:support-v4:25.3.1'
+    provided 'com.android.support:support-v4:25.3.1'// 提供用于兼容ActivityLauncher编写
     provided "org.lzh.nonview.updateplugin:UpdatePlugin:${UpdatePlugin_version}"
 
+    compile "com.qihoo360.replugin:replugin-host-lib:${RePlugin_version}"
     compile "com.github.yjfnypeu.Router:router-host:${ROUTER_VERSION}"
 }
 
