--- a/host/build.gradle
+++ b/host/build.gradle
@@ -24,7 +24,7 @@ android {
 dependencies {
     compile project(':core')
 
-    provided "org.lzh.compiler.parceler:parceler-api:${PARCELER_VERSION}"
+    provided "com.github.yjfnypeu.Parceler:api:${PARCELER_VERSION}"
     provided 'com.android.support:support-v4:25.3.1'// 提供用于兼容ActivityLauncher编写
     provided "org.lzh.nonview.updateplugin:UpdatePlugin:${UpdatePlugin_version}"
 
