--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     compile project(':core')
 
     provided 'com.qihoo360.replugin:replugin-plugin-lib:2.1.7'
-    provided "org.lzh.compiler.parceler:parceler-api:${PARCELER_VERSION}"
+    provided "com.github.yjfnypeu.Parceler:api:${PARCELER_VERSION}"
     provided 'com.android.support:support-v4:25.3.1'// 提供用于兼容ActivityLauncher编写
 
     compile "com.qihoo360.replugin:replugin-plugin-lib:${RePlugin_version}"
