--- a/RePluginDemo/plugina/build.gradle
+++ b/RePluginDemo/plugina/build.gradle
@@ -26,7 +26,11 @@ apply plugin: 'replugin-plugin-gradle'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':plugin')
+    if (useLocal) {
+        compile project(':plugin')
+    } else {
+        compile "com.github.yjfnypeu.Router-RePlugin:plugin:${Router_RePlugin_version}"
+    }
 
     annotationProcessor "com.github.yjfnypeu.Router:router-compiler:${ROUTER_VERSION}"
     annotationProcessor "com.jakewharton:butterknife-compiler:${ButterKnife_version}"
