--- a/RePluginDemo/usercenter/build.gradle
+++ b/RePluginDemo/usercenter/build.gradle
@@ -23,14 +23,18 @@ apply plugin: 'replugin-plugin-gradle'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "org.lzh.compiler.parceler:parceler-api:${PARCELER_VERSION}"
+    compile "com.github.yjfnypeu.Parceler:api:${PARCELER_VERSION}"
     annotationProcessor "com.github.yjfnypeu.Router:router-compiler:${ROUTER_VERSION}"
     annotationProcessor "com.jakewharton:butterknife-compiler:${ButterKnife_version}"
 
     compile "com.jakewharton:butterknife:${ButterKnife_version}"
     testCompile 'junit:junit:4.12'
 
-    compile project(':plugin')
+    if (useLocal) {
+        compile project(':plugin')
+    } else {
+        compile "com.github.yjfnypeu.Router-RePlugin:plugin:${Router_RePlugin_version}"
+    }
 }
 
 
