--- a/RePluginDemo/plugina/build.gradle
+++ b/RePluginDemo/plugina/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 
     compile 'com.android.support:support-v4:25.3.1'// 提供用于兼容ActivityLauncher编写
     testCompile 'junit:junit:4.12'
+    provided project(':baselib')
 }
 
 repluginPluginConfig {
