--- a/RePluginDemo/build.gradle
+++ b/RePluginDemo/build.gradle
@@ -30,6 +30,6 @@ ext {
     ButterKnife_version = "8.8.1"
     UpdatePlugin_version = "2.4.3"
     RePlugin_version = '2.1.7'
-    Router_RePlugin_version = '0.5'
-    useLocal = true // 指定当前使用的Router-RePlugin库。是使用本地的还是远程仓库的。
+    Router_RePlugin_version = '0.6'
+    useLocal = false // 指定当前使用的Router-RePlugin库。是使用本地的还是远程仓库的。
 }
