--- a/RePluginDemo/build.gradle
+++ b/RePluginDemo/build.gradle
@@ -25,11 +25,11 @@ task clean(type: Delete) {
 }
 
 ext {
-    ROUTER_VERSION="2.5.0"
+    ROUTER_VERSION="2.6.0"
     PARCELER_VERSION="1.2"
     ButterKnife_version = "8.8.1"
     UpdatePlugin_version = "2.4.3"
     RePlugin_version = '2.1.7'
     Router_RePlugin_version = '0.6'
-    useLocal = false // 指定当前使用的Router-RePlugin库。是使用本地的还是远程仓库的。
+    useLocal = true // 指定当前使用的Router-RePlugin库。是使用本地的还是远程仓库的。
 }
