--- a/RePluginDemo/build.gradle
+++ b/RePluginDemo/build.gradle
@@ -1,5 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+apply from: './version.gradle'
 buildscript {
     repositories {
         jcenter()
@@ -24,12 +24,3 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-ext {
-    ROUTER_VERSION="2.6.0"
-    PARCELER_VERSION="1.3.5"
-    ButterKnife_version = "8.8.1"
-    UpdatePlugin_version = "2.9.1"
-    RePlugin_version = '2.1.7'
-    Router_RePlugin_version = '0.7.0'
-    useLocal = true // 指定当前使用的Router-RePlugin库。是使用本地的还是远程仓库的。
-}
