--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,4 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-ext {
-    ROUTER_VERSION="2.4.5"
-    PARCELER_VERSION="1.2"
-    ButterKnife_version = "8.8.1"
-    UpdatePlugin_version = "2.4.3"
-    RePlugin_version = '2.1.7'
-}
+apply from: 'RePluginDemo/version.gradle'
