--- a/RePluginDemo/build.gradle
+++ b/RePluginDemo/build.gradle
@@ -1,13 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 apply from: './version.gradle'
 buildscript {
+    ext.RePlugin_version = "2.2.4"
     repositories {
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'com.qihoo360.replugin:replugin-host-gradle:2.1.7'
-        classpath 'com.qihoo360.replugin:replugin-plugin-gradle:2.1.7'
+        classpath "com.qihoo360.replugin:replugin-host-gradle:$RePlugin_version"
+        classpath "com.qihoo360.replugin:replugin-plugin-gradle:$RePlugin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
