--- a/RePluginDemo/version.gradle
+++ b/RePluginDemo/version.gradle
@@ -1,9 +1,8 @@
 ext {
-    ROUTER_VERSION="2.6.0"
-    PARCELER_VERSION="1.3.5"
+    ROUTER_VERSION="1c9caf4a7a"
+    PARCELER_VERSION="1.3.9"
     ButterKnife_version = "8.8.1"
     UpdatePlugin_version = "2.9.1"
-    RePlugin_version = '2.1.7'
-    Router_RePlugin_version = '0.7.0'
-    useLocal = false // 指定当前使用的Router-RePlugin库。是使用本地的还是远程仓库的。
+    Router_RePlugin_version = '0.8.0'
+    useLocal = true // 指定当前使用的Router-RePlugin库。是使用本地的还是远程仓库的。
 }
